fix: autocomplete spacings for link search

--- a/src/frontend/scss/main.scss
+++ b/src/frontend/scss/main.scss
@@ -125,7 +125,8 @@ pre {
 
   .organisation-search,
   .taxon-search,
-  .language-search {
+  .language-search,
+  .links-search {
     display: grid;
     grid-template-rows: 100px 100px 100px;
   }
